--- a/src/components/Item/item.scss
+++ b/src/components/Item/item.scss
@@ -33,7 +33,7 @@
         cursor: pointer;
         width: 100%;
         font-size: 14px;
-        &:hover {
+        :hover {
             opacity: 0.7;
           }
       }
